Fix font weight for h1, letter spacing and styles for portfolio.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,14 @@ transparent white              255, 255, 255, 0.6
   --secondary-color: #ffffff;
   --black-color: #000000;
   --mail-tel-color: rgba(255, 255, 255, 1);
+  --buttons-color: #f5f4fa;
 }
 body {
   color: var(--primary-text-color);
   background-color: #ffffff;
   font-family: roboto, sans-serif;
   font-style: normal;
+  letter-spacing: 0.03;
 }
 h1,
 h2,
@@ -43,6 +45,9 @@ a {
 ul {
   list-style: none;
 }
+address {
+  font-style: normal;
+}
 /* Header */
 /* Logo */
 .logo {
@@ -61,6 +66,7 @@ ul {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.02;
 }
 .site-nav a:hover,
 .site-nav a:focus {
@@ -71,6 +77,7 @@ ul {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  letter-spacing: 0.02;
 }
 .header-mail-tel:hover,
 .header-mail-tel:focus {
@@ -95,6 +102,7 @@ ul {
   color: var(--secondary-color);
   background-color: var(--accent-color);
   text-align: center;
+  letter-spacing: 0.06em;
 }
 /* Our advantages */
 .advantages > h2 {
@@ -132,12 +140,24 @@ ul {
   line-height: 1.2;
 }
 /* Our clients */
-/*  */
+.clients h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
 /* Main portfolio.html */
 /* Portfolio */
+.portfolio h2 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
 .portfolio-filter-button {
   border: none;
-  background-color: #f5f4fa;
+  background-color: var(--buttons-color);
   color: var(--primery-title-text-color);
   font-family: Roboto;
   font-style: 400;
@@ -150,8 +170,15 @@ ul {
   color: var(--secondary-color);
   background-color: var(--accent-color);
 }
-
 /* Works */
+.portfolio-project-type {
+  font-size: 16px;
+  line-height: 1.9;
+}
+.portfolio-project-description {
+  font-size: 18px;
+  line-height: 1.55;
+}
 /* Footer */
 /*  */
 /* Contacts */
